feat: update EBICS upload configuration and enhance benchmark profiles